# code_like_a_bosch_2022

./: .gitignore  CMakeLists.txt  Makefile  README.md  gui.cpp  gui.h  index.data  index.html  index.js  index.wasm  main.cpp  shell_minimal.html
.github/workflows/: build.yml
src/: gui.cpp  gui.h  main.cpp  play.cpp  play.h  reader.cpp  reader.h
